# solana-attestation-service

./: .env  .gitignore  Cargo.toml  README.md  package.json
cli/: Cargo.toml
cli/examples/: schema.json
cli/src/: main.rs
cli/src/instructions/: mod.rs  process_create_attestation.rs  process_create_credential.rs  process_create_request.rs  process_create_schema.rs  process_query.rs  utils.rs
clients/rust/: Cargo.toml
idl/: solana_attestation_service.json
integration_tests/tests/: test_close_attestation.rs  test_create_attestation.rs  test_create_request.rs  test_tokenization.rs
program/src/: constants.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs
program/src/processor/: create_request.rs  create_schema.rs  mod.rs
program/src/state/: discriminator.rs  mod.rs  request.rs
