[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.57"
bincode = "^1.3.1"
clap = { version = "3.2.25", features = ["derive", "env"] }
borsh = { workspace = true }
solana-attestation-service-macros = { path = "../cereal_macro" }
solana-attestation-service-client = { path = "../clients/rust", features = ["fetch"]  }
tokio = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = "2.1.13"

solana-account-decoder-client-types = { version = "2.1.13" }

[features]
default = []
fetch = ["solana-attestation-service-client/fetch"] 