
[features]
default = []
fetch = ["solana-client", "dep:serde", "dep:serde_with"]

[package]
name = "solana-attestation-service-client"
version = "1.0.6"
edition = "2021"
description = "Rust client for the Solana Attestation Service"
license = "MIT"
repository = "https://github.com/solana-foundation/solana-attestation-service"

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
solana-client = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "3.0", optional = true }
solana-sdk = { workspace = true }